# football-prediction

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GUIDE.md  LICENSE  MANIFEST.in  Makefile  PHASE1_COMPLETE_SUMMARY.md  PHASE1_TASK2_COMPLETE.md  PHASE2_PLAN.md  PHASE_COMPLETION_REPORT.md  README.md  alembic.ini  analyse_over_under.py  analyze_england_norway.py  auto_commit_test.txt  bracket_simulator.py  calibrate_blend_1x2.py  collect_all_worldcups.py  collect_leagues.py  collect_lineups.py  collect_player_data.py  collect_r16_data.py  collect_worldcup.py  collect_worldcup_xg.py  collect_xag_data.py  compare_models_brazil_norway.py  compare_retrained_blend.py  compare_three_model_blend.py  config.py  docker-compose.yml  find_value_bets.py  generate_blend_report.py  guidesetupforpyay.text  install_all_schedulers.bat  (+35 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automation.yml  ci.yml  docs.yml  pr-quality.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_optimize_indexes_and_partitions.py  003_tune_fillfactor_and_sequences.py  004_update_connection_config.py  005_fix_foreign_key_types.py  006_final_performance_tuning.py
api/: __init__.py  auth.py  main.py  middleware.py  models.py  schemas.py  secrets.py
app/: __init__.py  history_tab.py  import_tab.py  main.py  prediction_tab.py
config/: risk_management.yaml  three_model_weights.json
dashboard/: __init__.py  app.py  components.py  executive_dashboard.py  performance_monitoring.py
dashboard/pages/: 1_Model_Performance.py  2_Prediction_History.py  3_Betting_Results.py  4_CLV_Tracking.py  5_Bankroll_Monitoring.py
docs/: PROJECT_DOCUMENTATION.md  README.md  advanced_features.md  api.md  architecture.md  audit-report.md  automation.md  branch-protection.md  cli.md  configuration.md  data_versioning.md  database.md  database_connection_pooling.md  database_datatypes.md  database_indexes.md  database_migrations.md  database_partitioning.md  database_performance.md  database_schema_current.md  deployment_guide.md  developer_guide.md  er_diagram.md  etl.md  experiment_tracking.md  faq.md  feature_framework.md  feature_store.md  features.md  folder_structure.md  index.md  installation.md  leakage_audit_checklist.md  performance_optimization.md  pgbouncer_config.md  postgresql_optimization.md  production_readiness_audit.md  scheduler.md  software_architecture.md  testing_guide.md  troubleshooting.md  (+2 more)
docs/.obsidian/: graph.json  workspace.json
docs/benchmarks/: benchmark_queries.sql  explain_analyze_templates.sql
docs/features/: betting_market.md  elo_rating.md  feature_orchestrator.md  feature_validation.md  h2h.md  league_strength.md  schedule.md  team_form.md
docs/vault/: Architecture Overview.md  Auxiliary Modules.md  Betting Market Features.md  Code Link Plugin Setup.md  Config System.md  Data Collection Sources.md  Database Schema.md  Ensemble Model.md  Feature Engineering Pipeline.md  Feature Orchestrator.md  Feature Validation Framework.md  Football Prediction Codebase.md  Graph View CSS Snippet.md  Poisson & Elo Models.md  Quick Start Guide.md  Runtime Sequence Diagrams.md  Scheduler & Dashboard.md  Scripts Reference.md  Value Betting & Backtesting.md  Vault Theme CSS Snippet.md  backtesting.py.md  betting_market.py.md  calibration.py.md  confidence_scoring.py.md  config.py.md  data_loader.py.md  dixon_coles.py.md  eda.py.md  elo.py.md  ensemble.py.md  er_diagram.md  evaluate.py.md  feature_engineering.py.md  hyperparameter_tuning.py.md  odds_processing.py.md  orchestrator.py.md  orchestrator_cli.py.md  performance_optimization.md  player_info.py.md  poisson_model.py.md  (+7 more)
reports/profitability_analysis/: profitability_analysis_20260719_161306.json
scripts/: analyze_clv.py  audit_leakage.py  auto_commit.ps1  backtest_all_models.py  backtest_high_conf_away.py  backtest_league_live.py  backtest_staking_strategies.py  benchmark_database.py  bump_version.py  calculate_clv_backtests.py  calibrate_all_models.py  collect_closing_odds.py  collect_referee_stats.py  collect_statsbomb.py  collect_transfers.py  collect_weather.py  compare_backtest_before_after.py  compare_backtest_results.py  compare_clv_models.py  compare_phase3_models.py  compare_phase4_vs_phase3.py  compute_ensemble_weights.py  daily_data_pipeline.py  daily_feature_computation.py  daily_model_retraining.py  daily_predictions.py  data_quality_dashboard.py  debug_lineups.py  debug_lineups2.py  debug_lineups3.py  debug_transfermarkt.py  debug_transfermarkt2.py  deep_profitability_analysis.py  deploy.bat  deploy.sh  evaluate_existing.py  explore_backtest_data.py  feature_importance_analysis.py  final_system_validation.py  generate_backtest_charts.py  (+46 more)
src/: __init__.py  __main__.py  backtesting.py  calibration.py  cli.py  confidence_scoring.py  data_loader.py  di_container.py  dixon_coles.py  eda.py  elo.py  ensemble.py  evaluate.py  feature_engineering.py  feature_selection.py  hyperparameter_tuning.py  live_predictions.py  odds_api.py  odds_processing.py  player_features.py  player_info.py  poisson_model.py  predict.py  prediction_engine.py  preprocessing.py  time_series_cv.py  train.py  value_betting.py  xg_features.py
src/app/: dashboard.py  utils.py
src/backtesting/: __init__.py  backtester.py  clv.py  metrics.py
src/betting/: __init__.py  api.py  backtest.py  base.py  calculator.py  cli.py  clv.py  decorators.py  engine.py  ev.py  factory.py  filtering.py  kelly.py  models.py  plugins.py  registry.py  risk_management.py  staking.py
src/cache/: __init__.py  backend.py  decorators.py  manager.py  models.py
src/calibration/: __init__.py  calibrators.py  reporting.py  utils.py  wrappers.py
tests/: __init__.py  conftest.py  test_automation.py  test_odds_api.py  test_phase2_core_fixes.py  test_phase2_encoder_wiring.py  test_phase2_encoding_mapping.py  test_phase2_exception_transparency.py  test_phase2_h2h_rolling.py  test_phase2_odds_pipeline.py
(+321 files in other folders)
